--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/wulu
-NEXTAUTH_SECRET=your-nextauth-secret
+DATABASE_URL=postgresql://postgres:Raffle@456@db.pklmodrvjpcqotsmqcqw.supabase.co:5432/postgres
+NEXTAUTH_SECRET=c1c1dd84d86c70bcb4fc48493b0c0556
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 STRIPE_SECRET_KEY=your-stripe-secret-key
 STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_BASE_URL=https://wulu-web.onrender.com
