--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE_URL=postgresql://postgres:Raffle@456@db.pklmodrvjpcqotsmqcqw.supabase.co:5432/postgres
 NEXTAUTH_SECRET=c1c1dd84d86c70bcb4fc48493b0c0556
-GOOGLE_CLIENT_ID=your-google-client-id
-GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_CLIENT_ID=592177154041-sojbv1tolu86lbl4gs517rhsgd84g0bv.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 STRIPE_SECRET_KEY=your-stripe-secret-key
 STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
 NEXT_PUBLIC_BASE_URL=https://wulu-web.onrender.com
